--- a/src/T06_project/T06.html
+++ b/src/T06_project/T06.html
@@ -14,6 +14,9 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-class="invert" data-paginate="true" data-footer="701335: Software for Accountancy (Nirand)" data-theme="default" lang="en-US" class="invert" data-marpit-pagination="2" style="--class:invert;--paginate:true;--footer:701335: Software for Accountancy (Nirand);--theme:default;" data-marpit-pagination-total="8">
 <h1 id="erpnext-business-simulation">ERPNext Business Simulation</h1>
+<blockquote>
+<p>Due Date: <strong>15 January 2026</strong></p>
+</blockquote>
 <footer>701335: Software for Accountancy (Nirand)</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-paginate="true" data-footer="701335: Software for Accountancy (Nirand)" data-theme="default" lang="en-US" class="invert" data-marpit-pagination="3" style="--class:invert;--paginate:true;--footer:701335: Software for Accountancy (Nirand);--theme:default;" data-marpit-pagination-total="8">
