--- a/src/T06_project/T06.html
+++ b/src/T06_project/T06.html
@@ -19,7 +19,7 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-paginate="true" data-footer="701335: Software for Accountancy (Nirand)" data-theme="default" lang="en-US" class="invert" data-marpit-pagination="3" style="--class:invert;--paginate:true;--footer:701335: Software for Accountancy (Nirand);--theme:default;" data-marpit-pagination-total="10">
 <h1 id="project-overview">Project Overview</h1>
 <ul>
-<li>Individual project</li>
+<li>Individual project or team project.</li>
 <li>Implement a small business inside ERPNext.</li>
 <li>Configure master data.</li>
 <li>Run key operations including purchasing, selling, inventory, HR, manufacturing (if relevant).</li>
@@ -108,7 +108,7 @@
 <td>20%</td>
 </tr>
 <tr>
-<td>Presentation Clarity and Teamwork</td>
+<td>Presentation Clarity</td>
 <td>10%</td>
 </tr>
 </tbody>
